# WBSS-ESP

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  justfile  readme.md  sdkconfig.old
.cache/clangd/index/: ADS8320.c.24D5CC7C9628D507.idx  ADS8320.c.FFE73B8285C9F3F5.idx  ADS8320.h.0F96D8A005803163.idx  CAN_driver.c.19C70856BCF96C45.idx  CAN_driver.c.BA775DDD0771AC94.idx  CAN_driver.h.23CBEB6012A54171.idx  CAN_driver.h.79F104EFF0306778.idx  main.c.A0FBAC3C5F3C8E28.idx
components/ADC_driver/: ADC_driver.c  ADC_driver.h  CMakeLists.txt
components/ADS1015/: ADS1015.c  ADS1015.h  CMakeLists.txt
components/ADS8320/: ADS8320.c  ADS8320.h  CMakeLists.txt
components/CAN_driver/: CAN_driver.c  CAN_driver.h  CMakeLists.txt
components/I2C_driver/: CMakeLists.txt  i2c_driver.c
components/esp_now_driver/: CMakeLists.txt  esp_now_driver.c  esp_now_driver.h
main/: CMakeLists.txt  main.c
src/: main.rs
